# openmontage-desktop

./: .env.example  .gitignore  README.md
.github/workflows/: build-macos.yml  build-windows.yml
backlot/: __main__.py  server.py
backlot/ui/: board.css  board.html  board.js  index.html  lib.js  library.js
desktop-shell/: package.json  pnpm-lock.yaml  vite.config.js
desktop-shell/src-tauri/: Cargo.toml  tauri.conf.json
desktop-shell/src-tauri/icons/: icon.icns
desktop-shell/src-tauri/src/: main.rs
desktop-shell/ui/: index.html
packaging/: backlot-server.spec  backlot_server.py
tools/graphics/: agnes_image.py
tools/video/: agnes_video.py
